public/styles/style.css
:root {
  --text: black;
  --bg: oklch(92.5% 0.005 214.3);
  --btn-bg: oklch(from white 75% c h);
  --btn-bg-hover: oklch(from white 80% c h);
  --btn-bg-transition: background-color 150ms;
  --link-clr-hover: oklch(from black 50% c h);
  --link-clr-transition: color 100ms ease-out;
  --sub-head-clr: oklch(from black 35% c h);
  --card-clr: oklch(from white 95% c h);
  --form-err-clr: oklch(55% 0.22 27);
  --action-text: oklch(63.438% 0.15496 50.254);
  --action-btn: oklch(25% 0.02 265);
  --action-btn-text: oklch(98% 0 0);
  --action-btn-hover: oklch(42% 0.07 265);
  color-scheme: light dark;
  color: var(--text);
  background: var(--bg);
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
@media (prefers-color-scheme: dark) {
  :root {
    --text: oklch(92.9% 0.013 255.508);
    --bg: oklch(12.9% 0.042 264.695);
    --btn-bg: oklch(37.2% 0.044 257.287);
    --btn-bg-hover: oklch(27.9% 0.041 260.031);
    --link-clr-hover: oklch(55.4% 0.046 257.417);
    --sub-head-clr: oklch(86.9% 0.022 252.894);
    --card-clr: oklch(20.8% 0.042 265.755);
    --form-err-clr: oklch(70% 0.16 25);
    --action-text: oklch(89.027% 0.26477 136.024);
    --action-btn: oklch(35% 0.06 265);
    --action-btn-text: oklch(90% 0.01 265);
    --action-btn-hover: oklch(43% 0.07 265);
  }
}
body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Open Sans",
    "Helvetica Neue",
    sans-serif;
  --section-width: min(1000px, 100% - 2rem);
  --fs-1_15: clamp(1rem, 0.9478rem + 0.2609vw, 1.15rem);
  --fs-1_35: clamp(1.15rem, 1.0804rem + 0.3478vw, 1.35rem);
}
.link_btn {
  text-decoration: none;
  text-decoration-skip-ink: auto;
  color: currentColor;
  font-size: var(--fs-1_15);
  background-color: var(--btn-bg);
  border: none;
  transition: var(--btn-bg-transition);
  padding: clamp(0.375rem, 0.2793rem + 0.4783vw, 0.65rem)
    clamp(0.625rem, 0.2337rem + 1.9565vw, 1.75rem);
  border-radius: 0.175rem;
}
.link_btn:hover {
  background-color: var(--btn-bg-hover);
}
input,
textarea,
select {
  background-color: var(--bg);
  padding: 0.5rem 0.25rem;
  border: 1px solid;
  border-radius: 0.5rem;
}
svg {
  width: 28px;
  @media (prefers-color-scheme: dark) {
    fill: azure;
  }
}
.errors li {
  color: var(--form-err-clr);
}
.form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  padding-block: clamp(1.5rem, 0.8043rem + 3.4783vw, 3.5rem);
  font-size: clamp(1rem, 0.913rem + 0.4348vw, 1.25rem);
  background-color: var(--card-clr);
  border-radius: clamp(1rem, 0.4783rem + 2.6087vw, 2.5rem);
}
.nav_header {
  --section-width: min(1000px, 100% - 1rem);
  width: var(--section-width);
  margin-inline: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 0;
  h1 {
    font-size: clamp(1.5rem, 1.3261rem + 0.8696vw, 2rem);
  }
  h1:hover {
    color: var(--link-clr-hover);
  }
  nav ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: clamp(0.75rem, 0.3152rem + 2.1739vw, 2rem);
    li {
      font-size: var(--fs-1_15);
    }
    .logout {
      padding-inline: clamp(0.875rem, 0.5707rem + 1.5217vw, 1.75rem);
    }
  }
  a {
    text-decoration: none;
  }
}
main:not([class]) {
  flex-grow: 1;
  display: grid;
  place-items: center;
}
.login {
  min-height: 60dvh;
  width: min(600px, 100%);
  h2 {
    font-size: clamp(1.5rem, 1.2391rem + 1.3043vw, 2.25rem);
    margin-bottom: 1.25rem;
  }
  .sign-up {
    display: flex;
    flex-direction: column;
    gap: 1.25rem;
    div {
      display: grid;
      grid-template-columns: clamp(6.25rem, 4.0761rem + 10.8696vw, 12.5rem) 1fr;
    }
    button {
      margin-top: 1.25rem;
      padding: 0.75rem;
      cursor: pointer;
      border: none;
    }
  }
  p > a {
    margin-left: 0.2em;
    color: var(--action-text);
  }
}
.folder,
.file {
  min-height: 20dvh;
  .add,
  .edit {
    display: flex;
    flex-direction: column;
    gap: 1.25rem;
    div {
      display: grid;
      gap: 1.5rem;
    }
    button {
      margin-top: 1.25rem;
      cursor: pointer;
      border: none;
    }
  }
}
.folder,
.file {
  width: min(375px, 100%);
}
.file.add-file {
  width: min(600px, 100%);
  .add {
    div {
      label {
        max-width: 33ch;
      }
    }
  }
}
.home,
.selectFolder {
  min-height: 70dvh;
  width: var(--section-width);
  display: flex;
  flex-direction: column;
  ._folders,
  ._files {
    display: grid;
    article {
      min-height: 50px;
      display: flex;
      align-items: center;
      justify-content: space-between;
      background-color: var(--btn-bg-hover);
      padding-inline: clamp(0.25rem, -0.0109rem + 1.3043vw, 1rem);
      border-radius: 0.25rem;
      .popoverBtn {
        cursor: pointer;
        background: none;
        border: none;
        text-decoration: underline;
      }
    }
  }
  ._folders {
    gap: 1.5rem;
    article:first-child {
      margin-top: 2rem;
    }
  }
  ._files {
    article {
      margin-top: 1.5rem;
    }
  }
  .header,
  .actions {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    h3 {
      text-align: start;
    }
  }
  .actions {
    form {
      display: flex;
      align-items: center;
      justify-content: center;
    }
    button {
      cursor: pointer;
      background: none;
      border: none;
    }
  }
}
.home {
  ._header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-size: var(--fs-1_35);
    padding-bottom: 0.5rem;
    /* margin-bottom: 3rem; */
    border-bottom: 2px solid;
    h2 {
      align-self: flex-start;
      font-size: clamp(1.375rem, 1.1489rem + 1.1304vw, 2.025rem);
    }
    .links {
      display: flex;
      align-items: center;
      justify-content: center;
      gap: clamp(1rem, 0.8261rem + 0.8696vw, 1.5rem);
      a {
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: clamp(0.875rem, 0.4924rem + 1.913vw, 1.15rem);
        gap: clamp(0.625rem, 0.4946rem + 0.6522vw, 1rem);

        svg {
          width: clamp(1.25rem, 0.5543rem + 3.4783vw, 1.75rem);
        }
      }
    }
    @media (width <= 620px) {
      h2 {
        max-width: 15ch;
      }
      .links {
        flex-direction: column;
      }
    }
  }
}
.selectFolder {
  ._header {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    font-size: var(--fs-1_35);
    padding-bottom: 0.5rem;
    /* margin-bottom: 2rem; */
    border-bottom: 2px solid;
    gap: 2rem;
    .pageLinks {
      align-self: flex-start;
      display: flex;
      align-items: center;
      justify-content: center;
      gap: 2rem;
      a {
        min-width: 125px;
        text-align: center;
      }
    }
    ._details {
      display: flex;
      align-items: center;
      justify-content: space-between;
      ._left,
      .links {
        display: flex;
        align-items: center;
        justify-content: center;
        gap: clamp(0.875rem, 0.0054rem + 4.3478vw, 1.5rem);
      }
      ._left {
        svg {
          width: 1.75rem;
        }
      }
      .links {
        a {
          display: flex;
          align-items: center;
          justify-content: center;
          gap: 1rem;
          padding-inline: clamp(1rem, 0.8333rem + 0.8333vw, 1.25rem);
          svg {
            width: clamp(1.125rem, 0.2554rem + 4.3478vw, 1.75rem);
          }
        }
      }
      @media (width <= 450px) {
        flex-direction: column;
        gap: 1.25rem;
        align-items: start;
      }
    }
  }
}
.fileDetailsAside {
  background-color: var(--card-clr);
  position: absolute;
  inset: unset;
  top: 0;
  left: 100%;
  min-height: 100dvh;
  min-width: 450px;
  z-index: 1;
  transition: transform 0.25s ease-out;
  &:popover-open {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 2rem;
    animation: slide 0.35s ease-out forwards;
  }
  border: 1px solid var(--btn-bg);
  padding-block: 2rem;
  padding-inline: 1.25rem;
  font-size: var(--fs-1_15);
  .asideheader {
    --2rem: clamp(1.625rem, 1.4946rem + 0.6522vw, 2rem);
    > div:not([class]) {
      display: flex;
      align-items: center;
      justify-content: space-between;
      padding-inline-end: 1rem;
      h3 {
        font-size: var(--2rem);
      }
      button {
        background: none;
        border: none;
        cursor: pointer;
        svg {
          width: var(--2rem);
        }
      }
    }
    display: flex;
    flex-direction: column;
    gap: 3rem;
  }
  .fileDetails {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    p {
      display: grid;
      grid-template-columns: 125px 1fr;
    }
  }
  .fileActions {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    button {
      cursor: pointer;
      background: none;
      border: none;
    }
    .link_btn {
      font-size: 1.075rem;
    }
    .downloadBtn {
      background-color: var(--action-btn);
      color: var(--action-btn-text);
    }
    .downloadBtn:hover {
      background-color: var(--action-btn-hover);
    }
  }
  @media (width <= 450px) {
    min-width: 320px;
  }
}
@keyframes slide {
  to {
    translate: -450px;
  }
}
@media (width <= 450px) {
  @keyframes slide {
    to {
      translate: -320px;
    }
  }
}
footer {
  display: grid;
  place-items: center;
  font-size: 1.125rem;
  p {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
  }
}
.errorPage {
  > section {
    min-height: 100dvh;
    padding-inline: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #c8273e;
    color: black;

    h1 {
      font-size: clamp(5rem, 2.5652rem + 12.1739vw, 12rem);
      font-family: inherit;
      color: inherit;
      font-weight: 700;
    }
    h2 {
      font-size: clamp(2.25rem, 1.9891rem + 1.3043vw, 3rem);
      margin-block: 0.5rem;
    }
    p {
      font-size: clamp(1.5rem, 1.3261rem + 0.8696vw, 2rem);
      max-width: 35ch;
      text-align: center;
      margin-block: 0.5rem 1rem;
    }
    .link_btn {
      background-color: black;
      color: var(--text);
    }
    .link_btn:hover {
      background-color: oklch(from black 30% c h);
    }
  }
}

